# lib/api-spec/openapi.yaml
@@ -1656,6 +1656,8 @@ components:
           type: string
         patientId:
           type: string
+        salutation:
+          type: ["string", "null"]
         fullName:
           type: string
         dateOfBirth:
@@ -1704,6 +1706,8 @@ components:
       type: object
       required: [fullName, gender]
       properties:
+        salutation:
+          type: string
         fullName:
           type: string
         dateOfBirth:
@@ -1745,6 +1749,8 @@ components:
     PatientUpdate:
       type: object
       properties:
+        salutation:
+          type: string
         fullName:
           type: string
         dateOfBirth:
